# Mandelbrot

./: README.md
cpu/: CMakeLists.txt
cpu/src/: main.cpp
gpu/: CMakeLists.txt
gpu/src/: main_gpu.cu  main_gpu.cu.bckp
